[gd_scene load_steps=69 format=2]

[ext_resource path="res://NPC/Slime.png" type="Texture" id=1]
[ext_resource path="res://LightShadow_pipo.png" type="Texture" id=2]
[ext_resource path="res://NPC/Slime.gd" type="Script" id=3]
[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Neusharp-Bold.otf" type="DynamicFontData" id=5]

[sub_resource type="TileSet" id=1]
0/name = "LightShadow_pipo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 40, 32, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.36897, 5.79977 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 67.2821, 1.16255 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.12521, 67.4506 )

[sub_resource type="Animation" id=5]
resource_name = "HitBarat"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HitSelatan"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 73, 74 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 21, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "HitUtara"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 99, 100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61, 62 ]
}

[sub_resource type="Animation" id=15]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 83, 84, 85, 86, 87, 88 ]
}

[sub_resource type="Animation" id=17]
resource_name = "MatiBarat"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44, 45 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "MatiSelatan"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68, 69, 70, 71 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "MatiTimur"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "MatiUtara"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 91, 92, 93, 94, 95, 96, 97 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "TembakBarat"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 50, 49, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6.395 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "TembakSelatan"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 74, 75, 76, 77, 76, 75, 74 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6.395 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "TembakTimur"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 24, 23, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6.395 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "TembakUtara"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 100, 101, 102, 103, 102, 101, 100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6.395 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "HitTimur"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "HitBarat"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "HitSelatan"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "HitUtara"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleBarat"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "IdleTimur"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "IdleSelatan"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "IdleUtara"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "JalanBarat"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "JalanTimur"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "JalanSelatan"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "JalanUtara"

[sub_resource type="AnimationNodeBlendSpace2D" id=39]
blend_point_0/node = SubResource( 35 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 38 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "MatiBarat"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "MatiTimur"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "MatiUtara"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "MatiSelatan"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "TembakBarat"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "TembakTimur"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "TembakUtara"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "TembakSelatan"

[sub_resource type="AnimationNodeBlendSpace2D" id=49]
blend_point_0/node = SubResource( 45 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 46 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 47 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 48 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=56]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=57]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=61]
states/hit/node = SubResource( 29 )
states/hit/position = Vector2( 188.883, 304.926 )
states/idle/node = SubResource( 34 )
states/idle/position = Vector2( -26.3337, 178.111 )
states/jalan/node = SubResource( 39 )
states/jalan/position = Vector2( 189.217, 179.424 )
states/mati/node = SubResource( 44 )
states/mati/position = Vector2( 385.351, 303.346 )
states/tembak/node = SubResource( 49 )
states/tembak/position = Vector2( 187.846, 37.6667 )
transitions = [ "idle", "jalan", SubResource( 50 ), "jalan", "idle", SubResource( 51 ), "jalan", "tembak", SubResource( 52 ), "tembak", "jalan", SubResource( 53 ), "jalan", "hit", SubResource( 54 ), "hit", "jalan", SubResource( 55 ), "hit", "mati", SubResource( 56 ), "tembak", "idle", SubResource( 57 ), "idle", "tembak", SubResource( 58 ), "idle", "hit", SubResource( 59 ), "hit", "idle", SubResource( 60 ) ]
start_node = "idle"
graph_offset = Vector2( -305.649, -13.6417 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=62]

[sub_resource type="DynamicFont" id=63]
size = 14
use_filter = true
font_data = ExtResource( 5 )

[node name="NPC" type="KinematicBody2D" groups=[
"musuh",
]]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -0.374577, 1.87289 )
scale = Vector2( 0.7, 0.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 65534, 0, 0, 65535, 0, 1, 0, 0, 2, 1, 0, 3, 131070, 0, 65536, 131071, 0, 65537, 65536, 0, 65538, 65537, 0, 65539 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 26
vframes = 4
frame = 27

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0.148483, 0.260488 )
shape = SubResource( 2 )

[node name="H_area" type="Area2D" parent="."]
position = Vector2( 0, -2.99696 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="H_area"]
shape = SubResource( 3 )

[node name="V_area" type="Area2D" parent="."]
position = Vector2( 0, -6.395 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="V_area"]
shape = SubResource( 4 )

[node name="shoot_point" type="Node2D" parent="."]
position = Vector2( 0, -5.59792 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitBarat = SubResource( 5 )
anims/HitSelatan = SubResource( 6 )
anims/HitTimur = SubResource( 7 )
anims/HitUtara = SubResource( 8 )
anims/IdleBarat = SubResource( 9 )
anims/IdleSelatan = SubResource( 10 )
anims/IdleTimur = SubResource( 11 )
anims/IdleUtara = SubResource( 12 )
anims/JalanBarat = SubResource( 13 )
anims/JalanSelatan = SubResource( 14 )
anims/JalanTimur = SubResource( 15 )
anims/JalanUtara = SubResource( 16 )
anims/MatiBarat = SubResource( 17 )
anims/MatiSelatan = SubResource( 18 )
anims/MatiTimur = SubResource( 19 )
anims/MatiUtara = SubResource( 20 )
anims/TembakBarat = SubResource( 21 )
anims/TembakSelatan = SubResource( 22 )
anims/TembakTimur = SubResource( 23 )
anims/TembakUtara = SubResource( 24 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 61 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 62 )
parameters/hit/blend_position = Vector2( -0.196951, -0.0549133 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/jalan/blend_position = Vector2( 0, 0 )
parameters/mati/blend_position = Vector2( 0.281098, -0.00867057 )
parameters/tembak/blend_position = Vector2( -0.00182927, 0.476879 )

[node name="raycast_kiri" type="RayCast2D" parent="."]
scale = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( -25, 0 )
collision_mask = 27

[node name="raycast_kanan" type="RayCast2D" parent="."]
scale = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( 25, 0 )
collision_mask = 27

[node name="raycast_bawah" type="RayCast2D" parent="."]
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 27

[node name="raycast_atas" type="RayCast2D" parent="."]
scale = Vector2( 2, 1 )
enabled = true
cast_to = Vector2( 0, -25 )
collision_mask = 27

[node name="AttackTime" type="Timer" parent="."]

[node name="LifeTime" type="Timer" parent="."]

[node name="HP_Bar" parent="." instance=ExtResource( 4 )]
margin_left = -9.55399
margin_top = -12.5338
margin_right = 264.446
margin_bottom = 27.4662
rect_scale = Vector2( 0.0703779, 0.112214 )

[node name="Best" type="Label" parent="."]
visible = false
self_modulate = Color( 1, 0.34902, 0.027451, 1 )
margin_left = -9.65142
margin_top = -19.4513
margin_right = 30.3486
margin_bottom = -4.4513
rect_scale = Vector2( 0.469231, 0.485788 )
custom_fonts/font = SubResource( 63 )
text = "BEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]

[connection signal="kena_hit" from="." to="." method="_kena_tembak"]
[connection signal="body_entered" from="H_area" to="." method="_on_H_area_body_entered"]
[connection signal="body_exited" from="H_area" to="." method="_on_shoot_area_body_exited"]
[connection signal="body_entered" from="V_area" to="." method="_on_V_area_body_entered"]
[connection signal="body_exited" from="V_area" to="." method="_on_shoot_area_body_exited"]
[connection signal="timeout" from="AttackTime" to="." method="_on_ShootDelay_timeout"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
